--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -15,7 +15,11 @@
         {% for script in scripts %}
             <tr>
                 <td> {{ script[2] }} </td>
-                <td> {{ script[1] }} </td>
+                <td> 
+                    <a href="/stats/script/{{ script[2] }}/">
+                        {{ script[1] }}
+                    </a>
+                </td>
                 <td> {{ script[0] }} </td>
             </tr>
         {% endfor %}
