Templates: Fix scripts template. (Wrong URL)

--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -16,7 +16,7 @@
             <tr>
                 <td> {{ script[2] }} </td>
                 <td> 
-                    <a href="/stats/script/{{ script[2] }}/">
+                    <a href="/stats/script/{{ script[2] }}">
                         {{ script[1] }}
                     </a>
                 </td>
