--- a/templates/commits.html
+++ b/templates/commits.html
@@ -11,7 +11,7 @@
                 <th> Commit ID </th>
                 <th> Script Name </th>
                 <th> User Name </th>
-                <th> Time </th>
+                <th> Time (Minutes) </th>
             </tr>
         {% for commit in commits %}
             <tr>
