--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -10,7 +10,7 @@
             <tr>
                 <th> Script ID </th>
                 <th> Script Name </th>
-                <th> Total Time </th>
+                <th> Total Time (Minutes) </th>
             </tr>
         {% for script in scripts %}
             <tr>
