--- a/templates/users.html
+++ b/templates/users.html
@@ -10,7 +10,7 @@
             <tr>
                 <th> User ID </th>
                 <th> User Name </th>
-                <th> Total Time </th>
+                <th> Total Time (Minutes) </th>
             </tr>
         {% for user in users %}
             <tr>
