--- a/templates/script.html
+++ b/templates/script.html
@@ -7,7 +7,9 @@
     <h1>
         {{ script.name }}
     </h1>
-    <p> Total Time Committed: {{ ttc }} </p>
+    <p> Total Time Committed: 
+        {{ _import['datetime'].timedelta(minutes=ttc) }}
+    </p>
     <p> Total Commits: {{ tc }} </p>
     {% if vars %}
         <p> Vars: <p/>
