--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,13 @@
             }.iteritems(): %}
             <a href="/stats/{{ nav }}"> {{ name }} </a>
             {% endfor %}
+            {% if session %}
+                {% if session['loggedin']: %}
+                    <a href="/stats/logout"> Log out </a>
+                {% else %}
+                    <a href="/stats/login"> Log in </a>
+                {% endif %}
+            {% endif %}
             <div class="clearer"><span></span></div>
         </div>
         {% endblock %}
