--- a/templates/user.html
+++ b/templates/user.html
@@ -22,4 +22,6 @@
         {% endfor %}
         </ul>
     {% endif %}
+
+    <a href="/stats/user/{{user.id}}/commits"> Commits by this user </a>
 {% endblock %}
