--- a/templates/usercommits.html
+++ b/templates/usercommits.html
@@ -16,11 +16,27 @@
             </tr>
         {% for commit in commits %}
             <tr>
-                <td> {{ commit.id }} </td>
+                <td> <a href="/stats/commit/{{ commit.id }}">
+                        {{ commit.id }} </a> </td>
                 <td> {{ commit.timeadd }} </td>
-                <td> {{ commit.script.name }} </td>
+                <td> <a href="/stats/script/{{ commit.script.id }}">
+                        {{ commit.script.name }} </a> </td>
             </tr>
         {% endfor %}
         </table>
+
+        <p>
+        {% if pageid > 1 %}
+        <a href="/stats/user/{{user.id}}/commits/{{ pageid - 1 }}">prev</a>
+        <a href="/stats/user/{{user.id}}/commits/{{ pageid + 1 }}">next</a>
+        {% else %}
+        <a href="/stats/user/{{user.id}}/commits/{{ pageid + 1 }}">next</a>
+        {% endif %}
+        </p>
+
+    {% else %}
+
+    <p> How now, brown cow? (No more commits) </p>
+
     {% endif %}
 {% endblock %}
