--- a/templates/script.html
+++ b/templates/script.html
@@ -19,4 +19,6 @@
         {% endfor %}
         </ul>
     {% endif %}
+
+    <a href="/stats/script/{{script.id}}/commits/"> Commits to this script </a>
 {% endblock %}
