--- a/templates/scriptcommits.html
+++ b/templates/scriptcommits.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     <h1>
-        {{ script.name }}
+        Commits to {{ script.name }} (Page {{ pageid }})
     </h1>
     {% if commits %}
         <table>
