--- a/templates/usercommits.html
+++ b/templates/usercommits.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     <h1>
-        {{ user.name }}
+        Commits by {{ user.name }} (Page {{ pageid }})
     </h1>
     {% if commits %}
         <table>
