--- a/templates/script.html
+++ b/templates/script.html
@@ -20,5 +20,5 @@
         </ul>
     {% endif %}
 
-    <a href="/stats/script/{{script.id}}/commits"> Commits to this script </a>
+    <a href="{{baseurl}}/script/{{script.id}}/commits"> Commits to this script </a>
 {% endblock %}
