--- a/templates/scriptcommits.html
+++ b/templates/scriptcommits.html
@@ -16,10 +16,10 @@
             </tr>
         {% for commit in commits %}
             <tr>
-                <td> <a href="/stats/commit/{{ commit.id }}">
+                <td> <a href="{{baseurl}}/commit/{{ commit.id }}">
                         {{ commit.id }} </a> </td>
                 <td> {{ commit.timeadd }} </td>
-                <td> <a href="/stats/user/{{ commit.user.id }}">
+                <td> <a href="{{baseurl}}/user/{{ commit.user.id }}">
                         {{ commit.user.name }} </a> </td>
             </tr>
         {% endfor %}
@@ -27,10 +27,10 @@
 
         <p>
         {% if pageid > 1 %}
-        <a href="/stats/script/{{script.id}}/commits/{{ pageid - 1 }}">prev</a>
-        <a href="/stats/script/{{script.id}}/commits/{{ pageid + 1 }}">next</a>
+        <a href="{{baseurl}}/script/{{script.id}}/commits/{{ pageid - 1 }}">prev</a>
+        <a href="{{baseurl}}/script/{{script.id}}/commits/{{ pageid + 1 }}">next</a>
         {% else %}
-        <a href="/stats/script/{{script.id}}/commits/{{ pageid + 1 }}">next</a>
+        <a href="{{baseurl}}/script/{{script.id}}/commits/{{ pageid + 1 }}">next</a>
         {% endif %}
         </p>
 
