--- a/templates/users.html
+++ b/templates/users.html
@@ -16,7 +16,7 @@
             <tr>
                 <td> {{ user[2] }} </td>
                 <td>
-                    <a href="/stats/user/{{ user[2] }}">
+                    <a href="{{baseurl}}/user/{{ user[2] }}">
                         {{ user[1] }}
                     </a>
                 </td>
@@ -27,10 +27,10 @@
 
         <p>
         {% if pageid > 1 %}
-        <a href="/stats/user/all/{{ pageid - 1 }}">prev</a>
-        <a href="/stats/user/all/{{ pageid + 1 }}">next</a>
+        <a href="{{baseurl}}/user/all/{{ pageid - 1 }}">prev</a>
+        <a href="{{baseurl}}/user/all/{{ pageid + 1 }}">next</a>
         {% else %}
-        <a href="/stats/user/all/{{ pageid + 1 }}">next</a>
+        <a href="{{baseurl}}/user/all/{{ pageid + 1 }}">next</a>
         {% endif %}
         </p>
 
