--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,9 @@
             <a href="{{baseurl}}/{{ nav }}"> {{ name }} </a>
             {% endfor %}
             {% if session and session['loggedin'] %}
-            <a href="{{baseurl}}/logout"> Log out </a>
+            <a href="{{baseurl}}/logout">
+                Log out ({{ session['loggedin_name'] }})
+            </a>
             {% else %}
             <a href="{{baseurl}}/login"> Log in </a>
             {% endif %}
