Stats:  Add basic script management.
Supports listing your scripts and adding variables to scripts.

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,9 +31,14 @@
             <a href="{{baseurl}}/{{ nav }}"> {{ name }} </a>
             {% endfor %}
             {% if session and session['loggedin'] %}
+            <a href="{{baseurl}}/manage/scripts">
+                My Scripts
+            </a>
+
             <a href="{{baseurl}}/logout">
                 Log out ({{ session['loggedin_name'] }})
             </a>
+
             {% else %}
             <a href="{{baseurl}}/login"> Log in </a>
             {% endif %}
