Stats:  Add Create Script feature.

--- a/templates/managescripts.html
+++ b/templates/managescripts.html
@@ -14,5 +14,7 @@
         </li>
         {% endfor %}
     </ul>
+
+    <a href="{{baseurl}}/manage/script/new">Create a new script</a>
     {% endif %}
 {% endblock %}
