Stats:  Add User Registration.
Fix bug in managescripts template.
Fix bug in createscript template.

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,7 @@
 
             {% else %}
             <a href="{{baseurl}}/login"> Log in </a>
+            <a href="{{baseurl}}/register"> Register </a>
             {% endif %}
             <div class="clearer"><span></span></div>
         </div>
