Stats: Fix error in user page.

--- a/templates/user.html
+++ b/templates/user.html
@@ -8,7 +8,11 @@
         {{ user.name }}
     </h1>
     <p> Total Time Committed: 
+        {% if ttc %}
         {{ _import['datetime'].timedelta(minutes=ttc) }}
+        {% else %}
+        {{ _import['datetime'].timedelta(minutes=0) }}
+        {% endif %}
     </p>
     <p> Total Commits: {{ tc }} </p>
     {% if user.scripts %}
