Templates: Fix 404 template.

--- a/templates/404.html
+++ b/templates/404.html
@@ -6,5 +6,5 @@
 {% block content %}
         <p> We could not find the page you requested in our web space: </p>
         {{url}}
-        <p> Click here to return <a href="{{baseurl}}">home</a>! </p>
+        <p> Click here to return <a href="{{baseurl}}/">home</a>! </p>
 {% endblock %}
