Templates: Add credits for template designer.

--- a/templates/base.html
+++ b/templates/base.html
@@ -126,6 +126,8 @@
     <a href="http://www.vim.org/">
         <img src="http://www.vim.org/images/vim_created.gif"</img>
     </a>
+    <div class="right"><a href="http://templates.arcsin.se/">Website
+            template</a> by <a href="http://arcsin.se/">Arcsin</a></div>
     {% endblock %}
 </div>
 </body>
