Stats: Add more advanced statistics.
Added /user/:id/script:id/
Added /user/:id/script:id/commits/:pageid

--- a/templates/commits.html
+++ b/templates/commits.html
@@ -12,6 +12,7 @@
                 <th> Script Name </th>
                 <th> User Name </th>
                 <th> Time (Minutes) </th>
+                <th> Submitted </th>
             </tr>
         {% for commit in commits %}
             <tr>
@@ -31,6 +32,7 @@
                     </a>
                 </td>
                 <td> {{ commit.timeadd }} </td>
+                <td> {{ commit.timestamp.ctime() }} </td>
             </tr>
         {% endfor %}
         </table>
