--- a/templates/userscript.html
+++ b/templates/userscript.html
@@ -8,7 +8,9 @@ Statistics of commits by {{ user.name }} to {{ script.name }}
 <p> <a href="{{baseurl}}/user/{{user.id}}">{{ user.name }}</a>
 has added {{ time['commit_time'] }} minutes to
 <a href="{{baseurl}}/script/{{script.id}}">{{ script.name }}</a>
-in {{ time['commit_amount'] }} commits. <p>
+in {{ time['commit_amount'] }}
+<a href="{{baseurl}}/user/{{user.id}}/script/{{script.id}}/commits/">
+    commits</a>.<p>
 
 <p> More specifically, this is how many variables he committed: </p>
 <ul>
