Templates: Expose new features.

--- a/templates/scriptcommits.html
+++ b/templates/scriptcommits.html
@@ -20,7 +20,12 @@
                         {{ commit.id }} </a> </td>
                 <td> {{ commit.timeadd }} </td>
                 <td> <a href="{{baseurl}}/user/{{ commit.user.id }}">
-                        {{ commit.user.name }} </a> </td>
+                        {{ commit.user.name }}</a>
+                
+                <a href="{{baseurl}}/user/{{commit.user.id}}/script/{{script.id}}">
+                    (commits by user)
+                </a>
+                </td>
             </tr>
         {% endfor %}
         </table>
