--- a/templates/usercommits.html
+++ b/templates/usercommits.html
@@ -19,8 +19,14 @@
                 <td> <a href="{{baseurl}}/commit/{{ commit.id }}">
                         {{ commit.id }} </a> </td>
                 <td> {{ commit.timeadd }} </td>
-                <td> <a href="{{baseurl}}/script/{{ commit.script.id }}">
-                        {{ commit.script.name }} </a> </td>
+                <td>
+                <a href="{{baseurl}}/script/{{ commit.script.id }}">
+                {{ commit.script.name }}</a>
+                <a href="{{baseurl}}/user/{{user.id}}/script/{{commit.script.id}}">
+                    (commits by user)
+                </a>
+
+                </td>
             </tr>
         {% endfor %}
         </table>
